# goit-web-hw-07

./: README.md  alembic.ini  algo.md  command_handler.py  config.ini  main.py  my_select.py  pyproject.toml  seeds.py
configuration/: db.py  db_model.py  db_operations.py
db_migration/: env.py
db_migration/versions/: cb7d1a64ecc6_init.py  cd39e09ba3da_init.py  ebc3716ded8c_init.py
